Fix button alignment in legend
Non closeable legend items had some issues due to the lack of the close button.

--- a/components/map/legend/style.scss
+++ b/components/map/legend/style.scss
@@ -91,7 +91,11 @@ li.vizzuality__c-legend-item {
           box-shadow: $box-shadow-3;
         }
 
-        &:last-of-type {
+        &:last-of-type:nth-of-type(3) {
+          margin-right: rem(18 + 12); // 12px is the margin set by vizz-components
+        }
+
+        &:nth-of-type(4) {
           position: relative;
 
           &:before {
